--- a/code/client/Running_cat1/app/src/main/res/layout/map1.xml
+++ b/code/client/Running_cat1/app/src/main/res/layout/map1.xml
@@ -3,6 +3,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText1"
+        android:layout_gravity="center_horizontal"
+        android:text="准备就绪..."
+        android:gravity="center_vertical|center_horizontal"
+        android:allowUndo="false"
+        android:autoText="false"
+        android:background="@drawable/home_btn_bg_d"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:clickable="false"
+        android:editable="false"
+        android:textSize="28dp"
+        android:layout_weight="0.28" />
+
     <com.baidu.mapapi.map.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
@@ -24,14 +41,16 @@
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:clickable="false"
-        android:editable="false" />
+        android:editable="false"
+        android:textSize="28dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/startButton"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/start_button" />
+        android:background="@drawable/start_button"
+        />
 
 
 </LinearLayout>
