--- a/code/client/Running_cat1/app/src/main/res/layout/five.xml
+++ b/code/client/Running_cat1/app/src/main/res/layout/five.xml
@@ -37,7 +37,8 @@
                 android:text="Naive"
                 android:textSize="20dp"
                 android:textColor="#ffffff"
-                android:editable="true"/>
+                android:editable="true"
+                android:id="@+id/Nickname"/>
 
         </LinearLayout>
 
@@ -66,7 +67,8 @@
                 android:text="1级"
                 android:textSize="20dp"
                 android:gravity="center"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:id="@+id/catLevel"/>
 
         </LinearLayout>
 
@@ -192,7 +194,7 @@
                 android:text="0.0公里"
                 android:textSize="18dp"
                 android:textColor="#ffffff"
-                android:id="@+id/textView33" />
+                android:id="@+id/longestDistanceTextView" />
 
         </LinearLayout>
 
@@ -222,7 +224,7 @@
                 android:text="0.0小时"
                 android:textSize="18dp"
                 android:textColor="#ffffff"
-                android:id="@+id/textView44" />
+                android:id="@+id/longestTimeTextView" />
 
         </LinearLayout>
 
