--- a/code/client/Running_cat1/app/src/main/res/layout/friend_item.xml
+++ b/code/client/Running_cat1/app/src/main/res/layout/friend_item.xml
@@ -6,6 +6,7 @@
     android:background="#444444">
 
     <ImageView
+        android:src="@drawable/touxiang"
         android:id="@+id/friend_image"
         android:layout_width="60dp"
         android:layout_height="60dp" />
