--- a/code/client/Running_cat1/app/src/main/res/layout/login.xml
+++ b/code/client/Running_cat1/app/src/main/res/layout/login.xml
@@ -28,7 +28,7 @@
         <EditText
             android:id="@+id/account"
             android:layout_height="wrap_content"
-            android:hint="请输入账号（注册邮箱）" />
+            android:hint="请输入账号" />
     </TableRow>
 
     <TableRow>
